--- a/Pipeline_SimpleImputer_SetUp.ipynb
+++ b/Pipeline_SimpleImputer_SetUp.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOqzK66133Qova3dhzlMrad",
+      "authorship_tag": "ABX9TyNHJaJ7X+ExTLOfbBsTqOuH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -161,7 +161,87 @@
         "plt.ylim(0, 60)  # corrected from plt.ylim[0,60] to plt.ylim(0, 60)\n",
         "plt.tight_layout()\n",
         "plt.show()\n",
-        "\n"
+        "\n",
+        "plt.subplot(1,3,2)\n",
+        "plt.bar(\n",
+        "    [0, 1],\n",
+        "    [-np.mean(cv_scores_lr[\"train_neg_mean_absolute_error\"]), -np.mean(cv_scores_lr[\"test_neg_mean_absolute_error\"])],\n",
+        "    yerr=[np.std(cv_scores_lr[\"train_neg_mean_absolute_error\"]), np.std(cv_scores_lr[\"test_neg_mean_absolute_error\"])]\n",
+        ")\n",
+        "plt.xticks([0, 1], [\"Train\", \"Test\"])\n",
+        "plt.ylabel(\"RMSE\")\n",
+        "plt.ylim(0, 60)  # corrected from plt.ylim[0,60] to plt.ylim(0, 60)\n",
+        "\n",
+        "\n",
+        "plt.subplot(1, 3, 3)\n",
+        "plt.bar(\n",
+        "    [0, 1],\n",
+        "    [np.mean(cv_scores_lr[\"train_r2\"]), np.mean(cv_scores_lr[\"test_r2\"])],\n",
+        "    yerr=[np.std(cv_scores_lr[\"train_r2\"]), np.std(cv_scores_lr[\"test_r2\"])]\n",
+        ")\n",
+        "plt.xticks([0, 1], [\"Train\", \"Test\"])\n",
+        "plt.ylabel(\"$R^2$\")\n",
+        "plt.tight_layout()\n",
+        "plt.show()\n",
+        "\n",
+        "from sklearn.linear_model import ElasticNet\n",
+        "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
+        "\n",
+        "# define pipelines\n",
+        "pipeline_en = make_pipeline(\n",
+        "    ElasticNet()\n",
+        ")\n",
+        "\n",
+        "pipeline_rfr = make_pipeline(\n",
+        "    RandomForestRegressor()\n",
+        ")\n",
+        "\n",
+        "pipeline_gbr = make_pipeline(\n",
+        "    GradientBoostingRegressor()\n",
+        ")\n",
+        "\n",
+        "# perform cross-validation\n",
+        "\n",
+        "cv_en = cross_validate(\n",
+        "        pipeline_en,\n",
+        "        X_train,\n",
+        "        y_train,\n",
+        "        cv=5,\n",
+        "        scoring=scoring,\n",
+        "        return_train_score=True\n",
+        "    )\n",
+        "pipeline_gbr = male_pipeline(\n",
+        "    GradientBoostingRegressor()\n",
+        ")\n",
+        "\n",
+        "# Perform cross-validation\n",
+        "cv_en = cross_validate(\n",
+        "        pipeline_en,\n",
+        "        X_train,\n",
+        "        y_train,\n",
+        "        cv=5,\n",
+        "        scoring=scoring,\n",
+        "        return_train_score=True\n",
+        ")\n",
+        "\n",
+        "cv_rfr = cross_validate(\n",
+        "        pipeline_rfr,\n",
+        "        X_train,\n",
+        "        y_train,\n",
+        "        cv=5,\n",
+        "        scoring=scoring,\n",
+        "        return_train_score=True\n",
+        "    )\n",
+        "\n",
+        "cv_gbr = cross_validate(\n",
+        "        pipeline_gbr,\n",
+        "        X_train,\n",
+        "        y_train,\n",
+        "        cv=5,\n",
+        "        scoring=scoring,\n",
+        "        return_train_score=True\n",
+        "    )\n",
+        "print(\"Other three models trained!\")\n"
       ],
       "metadata": {
         "id": "oYocncSAkARK"
